--- a/style.css
+++ b/style.css
@@ -37,7 +37,11 @@ body {
     background-color: #fff;
     color: black;
 }
+.text-decoration-none{ 
+    color: white;
+   text-decoration:none; 
 
+}
 .nav-button.active:hover{
     background-color: #4a00e0;
 }
