--- a/styleabout.css
+++ b/styleabout.css
@@ -105,6 +105,9 @@ body {
     border-radius: 50%; 
     object-fit: cover; 
     border:transparent;
+    width: 250px; 
+    height: 250px;
+    
     
 
 
@@ -113,6 +116,8 @@ body {
     border-radius: 50%; 
     object-fit: cover; 
     border:transparent;
+     width: 150px;
+     height: 150px;
 }
 
 .nume {
