--- a/style.css
+++ b/style.css
@@ -37,9 +37,16 @@ body {
     background-color: #fff;
     color: black;
 }
-.text-decoration-none{ 
+.text-decoration-home{ 
+    color: black;
+   text-decoration:none;
+   
+
+}
+.text-decoration-about{ 
     color: white;
-   text-decoration:none; 
+   text-decoration:none;
+   
 
 }
 .nav-button.active:hover{
