--- a/stylehome1.css
+++ b/stylehome1.css
@@ -80,9 +80,11 @@ body {
     margin-top: 50px;
 }
 
-.contentt{
+.content{
+
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
 }
 .location{
 
