--- a/stylesignin.css
+++ b/stylesignin.css
@@ -1,3 +1,4 @@
+/* General Reset */
 *{
     margin: 0;
     padding: 0;
@@ -90,9 +91,13 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 .form-control {
-    border-radius: 30px;
-    margin-bottom: 20px;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    
 }
+option:disabled {
+    color: lightgrey;
+  }
 .btn-custom {
     border-radius: 20px;
     padding: 10px 20px;
@@ -102,6 +107,7 @@ body {
     border: none;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
 .btn-custom:hover {
     background-color: #eee;
 }
