--- a/stylesignin.css
+++ b/stylesignin.css
@@ -112,10 +112,20 @@ option:disabled {
     background-color: #eee;
 }
 .link-custom {
-    color: #6a11cb;
+    color:#ECAEF4 ;
     text-decoration: none;
     font-weight: bold;
 }
 .link-custom:hover {
     text-decoration: underline;
+}
+.text{
+    color:white;
+    text-decoration:none; 
+}
+.text:hover{
+    color:#333;
+}
+.text-dark{
+    color:#757575;
 }
