--- a/stylecumparaturi.css
+++ b/stylecumparaturi.css
@@ -79,3 +79,51 @@ body {
 .container {
     margin-top: 50px;
 }
+
+
+.content {
+    margin-top: 50px;
+    text-align: center;
+}
+
+.icon-container {
+    margin: 20px auto;
+     
+}
+
+.buttons{
+    width: 400px;
+    height: auto; 
+    cursor: pointer;
+    margin:none;
+}
+
+.page-title {
+    font-size: 24px;
+    color: #333;
+}
+
+
+
+
+.search-input {
+    width: 300px;
+    padding: 10px;
+    border: 2px solid #ccc;
+    border-radius: 25px 0 0 25px;
+    font-size: 16px;
+}
+
+.search-button {
+    padding: 10px;
+    border: none;
+    background: white;
+    border-left: 2px solid #ccc;
+    border-radius: 0 25px 25px 0;
+    cursor: pointer;
+}
+
+.search-button img {
+    width: 20px;
+    height: 20px;
+}
