--- a/stylecalendar.css
+++ b/stylecalendar.css
@@ -78,5 +78,27 @@ body {
 }
 .container {
     margin-top: 50px;
+}
 
 
+.content {
+    margin-top: 50px;
+    text-align: center;
+}
+
+.icon-container {
+    margin: 20px auto;
+     
+}
+
+.buttons{
+    width: 150px;
+    height: 150px; 
+    cursor: pointer;
+    margin:none;
+}
+
+.page-title {
+    font-size: 24px;
+    color: #333;
+}
