--- a/stylecumparaturi.css
+++ b/stylecumparaturi.css
@@ -127,3 +127,10 @@ body {
     width: 20px;
     height: 20px;
 }
+/* Map Container */
+#map {
+    margin: 0 auto;
+    width: 50%;
+    height: 500px;
+    margin-top: 20px;
+}
